# ttqaoa

./: .gitignore  README.md  generate_ensembles.py  graph_tiny.py  graph_toy.py  main.py  params_by_depths.py  params_by_depths_plot.py  params_by_depths_plot_single.py  params_by_depths_single.py  pyproject.toml  quota.py  requirements.txt  time_conflict.py
data/processed/: params.csv  tiny_graph_dense.pickle  tiny_graph_sparse.pickle  toy_graph_dense.pickle  vikstal_params_ensemble.csv
data/raw/16qbit/: InstructorQuota.csv  Task.csv
data/raw/16qbit_quota/: InstructorQuota.csv  InstructorSlot.csv  Task.csv
data/raw/16qbit_time_conflict/: InstructorQuota.csv  InstructorSkill.csv  InstructorSlot.csv  SlotConflict.csv  Task.csv  slotDOTW.csv
data/raw/16qubits/: InstructorQuota.csv  InstructorSkill.csv  InstructorSlot.csv  Task.csv
data/raw/20qubits/: InstructorQuota.csv  InstructorSkill.csv  InstructorSlot.csv  Task.csv
data/raw/ensembles/: diverse.md
data/raw/ensembles/inst_01/: InstructorQuota.csv  InstructorSkill.csv  InstructorSlot.csv  Task.csv
data/raw/ensembles/inst_02/: InstructorQuota.csv  InstructorSkill.csv  InstructorSlot.csv  Task.csv
data/raw/ensembles/inst_03/: InstructorQuota.csv  Task.csv  (+2 more)
data/raw/tiny/: InstructorQuota_tiny.csv  InstructorSkill_tiny.csv  InstructorSlot_tiny.csv  SlotConflict_tiny.csv  Task_tiny.csv  Task_tiny_dense.csv
data/raw/toy/: InstructorSkill.csv  InstructorSlot.csv  QAOA_Data_Fall_2025 - Task_easy - Dense.csv  Task.csv
notebooks/share/: QAOA_Full.ipynb
qmos_qaoa/: data.py  model.py  solver.py  utils.py
(+66 files in other folders)
