[project]
name = "qmos-qaoa"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "ortools>=9.14.6206",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "pennylane>=0.43.2",
    "scipy>=1.16.3",
    "scipy-stubs>=1.16.3.3",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.1",
]
